# KernelDriver

./: .gitignore  .gitmodules  CMakeLists.txt  Func.cpp  Hooks.cpp  Mem.cpp  README.md  Test driver.sln  TestSign.cer  main.cpp  structs.h  utils.h
Driver/: CMakeLists.txt  Func.cpp  Hooks.cpp  LazyImport.cpp  Mem.cpp  README.md  TestSign.pfx  main.cpp
Driver/Lib/: structs.h
Lib/: structs.h
Test driver/: Test driver.vcxproj  Test driver.vcxproj.filters  Testdriver.inf
Test driver/src/: Controller.cpp  Controller.h  Structs.h  Utils.h  main.cpp
UM/: UM.vcxproj  UM.vcxproj.filters
UM/src/: Utils.h  main.cpp
User/: CMakeLists.txt  main.cpp
